--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+//spring.datasource.url=jdbc:h2:mem:testdb
+//spring.datasource.driverClassName=org.h2.Driver
+//spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=embedded
+spring.jpa.defer-datasource-initialization=true
 
+sfg.brewery.BEER_INVENTORY_SERVICE_HOST=http://localhost:8082
