--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.sql.init.mode=embedded
 spring.jpa.defer-datasource-initialization=true
 
 sfg.brewery.BEER_INVENTORY_SERVICE_HOST=http://localhost:8082
+
+spring.cache.jcache.config=classpath:ehcache.xml
