--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-//spring.datasource.url=jdbc:h2:mem:testdb
-//spring.datasource.driverClassName=org.h2.Driver
-//spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=embedded
 spring.jpa.defer-datasource-initialization=true
 
 sfg.brewery.BEER_INVENTORY_SERVICE_HOST=http://localhost:8082
 
 spring.cache.jcache.config=classpath:ehcache.xml
+
+#spring.profiles.active=localmysql
+
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
