added event driven

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ sfg.brewery.BEER_INVENTORY_SERVICE_HOST=http://localhost:8082
 
 spring.cache.jcache.config=classpath:ehcache.xml
 
-#spring.profiles.active=localmysql
+spring.profiles.active=localmysql
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+logging.level.root=debug
