--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,15 @@ sfg.brewery.BEER_INVENTORY_SERVICE_HOST=http://localhost:8082
 
 spring.cache.jcache.config=classpath:ehcache.xml
 
-spring.profiles.active=localmysql
+spring.application.name=beer-service
+
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka/
+eureka.client.instance.preferIpAddress = true
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-logging.level.root=debug
+#logging.level.root=debug
+
+#http://localhost:8080/api/v1/beer/4afa8213-4759-4e82-97b5-41273ba492b5
+#http://localhost:8080/api/v1/beerUpc/0631234200036
