--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,23 @@
 spring.sql.init.mode=embedded
 spring.jpa.defer-datasource-initialization=true
-
 sfg.brewery.BEER_INVENTORY_SERVICE_HOST=http://localhost:8082
 
-spring.cache.jcache.config=classpath:ehcache.xml
-
 spring.application.name=beer-service
+#Eureka
+ureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
-eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka/
-eureka.client.instance.preferIpAddress = true
+
+#Active MQ
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+
+
+
+spring.cache.jcache.config=classpath:ehcache.xml
+
 
 #logging.level.root=debug
 
