--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ sfg.brewery.BEER_INVENTORY_SERVICE_HOST=http://localhost:8082
 
 spring.application.name=beer-service
 #Eureka
-ureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 
@@ -14,11 +14,14 @@ spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
 
-
+#Hystrix
+feign.hystrix.enabled=true
 
 spring.cache.jcache.config=classpath:ehcache.xml
 
+#spring.config.import=optional:configserver:http://localhost:8888
 
+spring.zipkin.base-url=http://localhost:9411/
 #logging.level.root=debug
 
 #http://localhost:8080/api/v1/beer/4afa8213-4759-4e82-97b5-41273ba492b5
